# catflow-service-taskcreator

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
catflow_service_taskcreator/: label_studio.py  worker.py
tests/: conftest.py  test_import.py
